--- a/Thiết kế web/Học Ngoài Lớp/Kiểm tra năng lực/index.html
+++ b/Thiết kế web/Học Ngoài Lớp/Kiểm tra năng lực/index.html
@@ -17,7 +17,7 @@
     <div class="wrap">
         <div class="container">
 
-            <div class="mua">
+            <div class="mua" id="mua">
                 <p><strong>Vui lòng điền đầy đủ thông tin</strong></p>
                 <div class="name"><input id="Name" type="text" placeholder="Tên khách hàng"></div>
                 <div class="number"><input id="Phone" type="text" placeholder="Số điện thoại"></div>
@@ -49,9 +49,8 @@
                     <div class="nav-fixed">
                         <div class="nav-noibat"><strong>Sản phẩm nổi bật</strong></div>
 
-                        <div class="nav-menu">
-                            <i class="fa-brands fa-hotjar"></i>
-                            <button onclick="MUTOSI()" id="MUTOSI">Nồi cơm điện MUTOSI</button>
+                        <div class="nav-menu">                            
+                            <button onclick="MUTOSI()" id="MUTOSI"><i class="fa-brands fa-hotjar"></i>Nồi cơm điện MUTOSI</button>
                             <hr>
                         </div>                       
 
