--- a/Thiết kế web/Học Ngoài Lớp/Kiểm tra năng lực/index.html
+++ b/Thiết kế web/Học Ngoài Lớp/Kiểm tra năng lực/index.html
@@ -13,11 +13,11 @@
     <title>Kiểm tra năng lực</title>
 </head>
 
-<body>
+<body id="body" >
     <div class="wrap">
         <div class="container">
 
-            <div class="mua" id="mua">
+            <div class="mua" id="mua" >
                 <p><strong>Vui lòng điền đầy đủ thông tin</strong></p>
                 <div class="name"><input id="Name" type="text" placeholder="Tên khách hàng"></div>
                 <div class="number"><input id="Phone" type="text" placeholder="Số điện thoại"></div>
