--- a/Thiết kế web/Bài tập lớp/fromBT8/index.html
+++ b/Thiết kế web/Bài tập lớp/fromBT8/index.html
@@ -35,8 +35,8 @@
                             <td>Quê quán:</td>
                             <td>
                                 <select name="qq">
-                                    <option value="HN">Hà Nội</option>
-                                    <option value="HCM">Hồ Chí Minh</option>
+                                    <option value="Hà Nội">Hà Nội</option>
+                                    <option value="Hồ Chí Minh">Hồ Chí Minh</option>
                                     <option value="Hạ Long">Hạ Long</option>
                                     <option value="Sao Hỏa">Sao Hỏa</option>
                                 </select>
@@ -54,7 +54,7 @@
                 <div class="header">
                     <h1>Thông tin vừa nhập</h1>
                 </div>
-                <div class="footer-content">
+                <div class="footer-content" id="table">
                     <table border="1">
                         <tr>
                             <td>Họ tên</td>
