--- a/Web bán sách/index.html
+++ b/Web bán sách/index.html
@@ -1,20 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" />
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <link rel="stylesheet" href="style_search_box.css">
+    <title>Web bán sách hay gì đó</title>
 </head>
+
 <body>
     <header>
-        <nav>
-            <ul>
-                <li>LOGo</li>
-            </ul>
-        </nav>
+        <img src="img/header.png" alt="">
     </header>
+    <nav>
+        <div class="top-nav">
+            <ul>
+                <li>
+                    <div class="logo"><img src="img/Logo.png" alt=""></div>
+                </li>
+                <li><a href="">Trà Vinh </a><i class="fas fa-map-marker-alt"></i></li>                
+                <li><button class="top-nav-btn-1"><i class="fas fa-shopping-cart"></i> Giỏ hàng</button></li>
+                <li><button class="top-nav-btn-2">Tài khoảng & đơn hàng</button></li>
+                <li><a href="">Tin tức</a></li>
+                <li><a href="">Hỏi đáp</a></li>
+                <li>
+                    <div class="search-box">
+                        <input class="search-box-input" type="text" placeholder="Bạn tìm gì...">
+                        <button class="search-box-btn"><i class="fas fa-search"></i></button>
+                    </div>
+                </li>
+            </ul>
+        </div>
+    </nav>
 </body>
 <script src="app.js"></script>
+<script src="app_search_box.js"></script>
+
 </html>
